# fishmlserv

./: .gitignore  Dockerfile  MANIFEST.in  README.md  fly.toml  pyproject.toml  r.txt
LB/: default.conf
dags/: fishmlserv_std.py
src/fishmlserv/: main.py  pred.py  tp.py
src/fishmlserv/model/: manager.py
