[project]
name = "fishmlserv"
version = "0.6.0"
description = "Serving Machine Learning Model - Using KNN"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
