[project]
name = "fishmlserv"
version = "1.1.0"
description = "Serving Machine Learning Model - Using KNN"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
get-model-path="fishmlserv.model.manager:get_model_path"
prediction="fishmlserv.pred:run"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
]
